# tooling

./: Cargo.toml  README-release.md  README.md
.github/workflows/: build.yml
cli/intent/: Cargo.toml
cli/intent/src/: check.rs  main.rs
client/wa2/: README.md  language-configuration-wa2.json  package-lock.json  package.json
client/wa2/src/: extension.ts
client/wa2/syntaxes/: wa2.tmLanguage.json
examples/tutorial/: project.wa2
server/wa2lsp/: Cargo.toml
server/wa2lsp/src/: backend.rs  core_engine.rs  lib.rs
server/wa2lsp/src/iaac/: mod.rs
server/wa2lsp/src/iaac/cloudformation/: registry_store.rs  spec_cache.rs  symbol_table.rs  type_resolver.rs
server/wa2lsp/src/iaac/cloudformation/cfn_ir/: display.rs  json.rs  parser.rs  tests.rs  validation.rs  yaml.rs
server/wa2lsp/src/intents/: guidance.rs  kernel.rs  mod.rs  model.rs  node.rs  system.rs
server/wa2lsp/src/intents/kernel/: ast.rs  lexer.rs  lower.rs  mod.rs  parser.rs  query.rs  rules.rs
server/wa2lsp/src/spec/cfn_ir/: parser.rs  types.rs  validation.rs
server/wa2lsp/tests/: fixtures.rs
wa2/core/v0.1/: bootstrap.wa2  core.wa2  logic.wa2  main.wa2
wa2/docs/: book.toml
wa2/docs/src/: README.md  carpark.md  chapter_1.md
