[package]
name = "intent"
version.workspace = true
edition.workspace = true

[dependencies]
wa2lsp = { path = "../../server/wa2lsp" }
clap = { version = "4", features = ["derive"] }
url = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

textwrap = "0.16"
owo-colors = "4"
is-terminal = "0.4"
terminal_size = "0.3"
unicode-width = "0.1"